[FIX] l10n_de: DIN5008: fix margin between top edge and image below
Previously a 10mm margin was added between the top edge and the image below.
The way the margin was added only offsets the picture by 10mm without
adjusting the image size (see PR #143383).

This may lead to an overlap between the image and text
below (depending on the dimensions of the image).

This fixes this issue by putting the 10mm margin "inside" the image
instead of "outside" of it. Thus the size of the image is adjusted correctly.

X-original-commit: 1676436f522399e78877725d99e845550f1b5c9a

--- a/addons/l10n_din5008/static/src/scss/report_din5008.scss
+++ b/addons/l10n_din5008/static/src/scss/report_din5008.scss
@@ -15,7 +15,7 @@
                 margin-bottom: -10mm;
             }
             img {
-                margin-top: 10mm;
+                padding-top: 10mm;
                 float: right;
             }
         }
